tor (0.2.1.30-1) unstable; urgency=low

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Sat, 26 Feb 2011 10:53:22 +0100

tor (0.2.1.29-1) unstable; urgency=high

  * New upstream version, including several security related fixes.  See
    upstream changelog for details.  Addresses CVE-2011-0427.

 -- Peter Palfrader <weasel@debian.org>  Sun, 16 Jan 2011 18:51:03 +0100

tor (0.2.1.28-1) unstable; urgency=high

  * New upstream version.
    - Fix a remotely exploitable bug that could be used to crash instances
      of Tor remotely by overflowing on the heap. Remote-code execution
      hasn't been confirmed, but can't be ruled out (CVE-2010-1676).
  * Since the dawn of time (0.0.2pre19-1, January 2004, initial release
    of the debian package), the postinst script has changed ownership and
    permissions of various trees like /var/lib/tor, /var/run/tor, and
    /var/log/tor, sometimes recursively.
    .
    It turns out this actually is a security issue, so try to be more
    conservative when fixing up modes and only chown/chgrp
    /var/{lib,log,run}/tor directly, never recursively.
  * Remove /var/run/tor, recursively, on purge.  We already do this
    for /var/lib/tor and /var/log/tor.

 -- Peter Palfrader <weasel@debian.org>  Fri, 17 Dec 2010 23:50:38 +0100

tor (0.2.1.27-1) unstable; urgency=low

  * New upstream version.
    - remove debian/patches/15_tlsext_host_name (already included in new
      upstream version).
    - remove debian/patches/16_add_maatuska (ditto).
  * debian/tor.docs: Remove doc/website/stylesheet.css and doc/website/tor-*
    since upstream has stopped shipping them in their tarball.

 -- Peter Palfrader <weasel@debian.org>  Mon, 29 Nov 2010 16:49:53 +0100

tor (0.2.1.26-4) unstable; urgency=high

  * Add debian/patches/15_tlsext_host_name: Work around change in libssl0.9.8
    (0.9.8g-15+lenny9 and 0.9.8o-3), taken from 0.2.1.27 (closes: #604198):
    .