@@ -1,8 +1,11 @@
 tor (0.2.1.30-1) unstable; urgency=low
 
   * New upstream version.
+  * The tor specification files are no longer shipped in the tarball,
+    so /usr/share/doc/tor/spec is no more.  They can be found online
+    at <URL:https://gitweb.torproject.org/torspec.git/tree>.
 
- -- Peter Palfrader <weasel@debian.org>  Sat, 26 Feb 2011 10:53:22 +0100
+ -- Peter Palfrader <weasel@debian.org>  Sat, 26 Feb 2011 10:57:43 +0100
 
 tor (0.2.1.29-1) unstable; urgency=high
 
